// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag /> ColorVariants story renders snapshot 1`] = `
<div
  class="tagList"
>
  <span
    class="text text--sm text--bold-weight tag tag--neutral"
    data-testid="test"
  >
    <span
      class="tag__body"
    >
      neutral
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--error"
    data-testid="test"
  >
    <span
      class="tag__body"
    >
      error
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--success"
    data-testid="test"
  >
    <span
      class="tag__body"
    >
      success
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--warning"
    data-testid="test"
  >
    <span
      class="tag__body"
    >
      warning
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--yield"
    data-testid="test"
  >
    <span
      class="tag__body"
    >
      yield
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--brand"
    data-testid="test"
  >
    <span
      class="tag__body"
    >
      brand
    </span>
  </span>
</div>
`;

exports[`<Tag /> Default story renders snapshot 1`] = `
<span
  class="text text--sm text--bold-weight tag tag--neutral"
>
  <span
    class="tag__body"
  >
    Tag text
  </span>
</span>
`;

exports[`<Tag /> OutlineVariants story renders snapshot 1`] = `
<div
  class="tagList"
>
  <span
    class="text text--sm text--bold-weight tag tag--neutral tag--outline"
  >
    <span
      class="tag__body"
    >
      neutral
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--error tag--outline"
  >
    <span
      class="tag__body"
    >
      error
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--success tag--outline"
  >
    <span
      class="tag__body"
    >
      success
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--warning tag--outline"
  >
    <span
      class="tag__body"
    >
      warning
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--yield tag--outline"
  >
    <span
      class="tag__body"
    >
      yield
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--brand tag--outline"
  >
    <span
      class="tag__body"
    >
      brand
    </span>
  </span>
</div>
`;

exports[`<Tag /> WithIcon story renders snapshot 1`] = `
<div
  class="tagList"
>
  <span
    class="text text--sm text--bold-weight tag tag--neutral tag--outline"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#favorite"
      />
    </svg>
    <span
      class="tag__body"
    >
      neutral
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--error tag--outline"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#favorite"
      />
    </svg>
    <span
      class="tag__body"
    >
      error
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--success tag--outline"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#favorite"
      />
    </svg>
    <span
      class="tag__body"
    >
      success
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--warning tag--outline"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#favorite"
      />
    </svg>
    <span
      class="tag__body"
    >
      warning
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--yield tag--outline"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#favorite"
      />
    </svg>
    <span
      class="tag__body"
    >
      yield
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--brand tag--outline"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#favorite"
      />
    </svg>
    <span
      class="tag__body"
    >
      brand
    </span>
  </span>
</div>
`;

exports[`<Tag /> WithLongTextAndIcon story renders snapshot 1`] = `
<div
  class="tagList"
>
  <span
    class="text text--sm text--bold-weight tag tag--neutral tag--outline"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#star"
      />
    </svg>
    <span
      class="tag__body"
    >
      This tag has a really long text message
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--error tag--outline"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#star"
      />
    </svg>
    <span
      class="tag__body"
    >
      This tag has a really long text message
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--success tag--outline"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#star"
      />
    </svg>
    <span
      class="tag__body"
    >
      This tag has a really long text message
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--warning tag--outline"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#star"
      />
    </svg>
    <span
      class="tag__body"
    >
      This tag has a really long text message
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--yield tag--outline"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#star"
      />
    </svg>
    <span
      class="tag__body"
    >
      This tag has a really long text message
    </span>
  </span>
  <span
    class="text text--sm text--bold-weight tag tag--brand tag--outline"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#star"
      />
    </svg>
    <span
      class="tag__body"
    >
      This tag has a really long text message
    </span>
  </span>
</div>
`;
